--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-delay": "^0.2.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.0",
     "multer": "^1.4.5-lts.1",
